# Voice-Agent

./: README.md  docker-compose.yml
.docker-config/buildx/activity/: default
voice-platform/: .gitignore  Dockerfile  env_sample  package-lock.json  package.json  start.sh
voice-platform/app/: globals.css  layout.tsx
voice-platform/app/api/event/: route.ts
voice-platform/app/api/event/[id]/: route.ts
voice-platform/app/api/event/[id]/participants/: route.ts
voice-platform/app/api/participant/[id]/: route.ts
voice-platform/app/api/score/: route.ts
voice-platform/app/api/session/: route.ts
voice-platform/app/api/session/[id]/: route.ts
voice-platform/app/api/session/[id]/message/: route.ts
voice-platform/app/api/session/end/: route.ts
voice-platform/app/api/session/room/[roomId]/: route.ts
voice-platform/app/api/token/: route.ts
voice-platform/app/call/[roomId]/: page.tsx
voice-platform/app/events/: page.tsx
voice-platform/app/events/[id]/: page.tsx
voice-platform/app/session/[id]/: page.tsx
voice-platform/app/sessions/: page.tsx
voice-platform/app/sessions/[id]/: page.tsx
voice-platform/components/: CallControls.tsx  EventItem.tsx  Navbar.tsx  SessionCard.tsx
voice-platform/lib/: livekit.ts  prisma.ts  sessions.ts
voice-platform/prisma/: schema.prisma
worker/: .gitignore  Dockerfile  README.md  agent_worker.py  config.py  env_sample  pyproject.toml
